feat: Metabase 63 + Data Studio transforms + quack-on-demand backend + catalog/schema test matrix
Metabase 63 / JDK 25:
- compose image -> v0.63.1.6, CI build matrix -> {v0.62.5, v0.63.1.6},
  harness job -> v0.63.1. The v0.63 image runs JDK 25; Arrow's allocator
  needs --add-opens for java.nio + --sun-misc-unsafe-memory-access=allow
  (JEP 498) or it dies with 'Could not initialize class ...RootAllocator'.
  Documented in README (Java/JVM requirements + troubleshooting) and the
  JAVA_OPTS are set in docker-compose.

Data Studio transforms (:transforms/table):
- advertised per connection via the same enable-uploads gate as CSV uploads
  (writable backends only; read-only servers stay out of Data Studio's
  compatible-database list). CTAS/run-transform machinery is inherited from
  the :sql/:sql-jdbc parents. tests/e2e/test_transforms.py verifies a CTAS
  transform runs and creates its output table on GizmoSQL.

quack-on-demand (starlake-ai) backend:
- Arrow Flight SQL multi-tenant DuckLake serving layer; compose service
  (demo mode, tenant acme/pool bi via additional-options gRPC headers, TLS).
  Catalog tests cover its DuckLake TPC-H catalog. Finding: RBAC-restricted
  users (table-scoped grants) can't pass Metabase's SELECT 1 health check,
  so only privileged service accounts are usable — documented in the tests.

Catalog/schema/schema-filters matrix (tests/e2e/test_catalog_schema_matrix):
- catalog scoping + include/exclude filters across GizmoSQL (3 catalogs),
  Spice (now multi-schema: public/transport/finance), InfluxDB 3 (iox vs
  system), quack (DuckLake). Driver fix: catalog filter in describe-database
  is now inlined (escaped) instead of a bound parameter — prepared-statement
  params returned zero rows on Spice/DataFusion and quack.

Also: richer mocks (Spice schema-qualified datasets; InfluxDB cpu/sensors
measurements), rewritten docs/intro.md (4-backend tour + profiles), and
looser metadata-refresh assertion (in-memory backends may shrink on
restar